2009-12-10  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-backend.lisp (*debug-swank-backend*): New variable. If
	true, backends should not catch internal errors (e.g. during
	definition finding), and should not perform backtrace magic.
	(make-error-location): New helper.
	(find-definitions [interface]): Default to error location.

	* swank-sbcl.lisp (converting-errors-to-location): New helper
	macro. Regards new *DEBUG-SWANK-BACKEND*.
	(find-definitions [implementation]): Use it.
	(find-source-location [implementation]): Ditto.
	(functiond-spec): Ditto.
	(frame-source-location [implementation]): Ditto.
	(*debug-definition-finding*): Removed.
	(make-source-location-specification): Removed.
	(safe-function-source-location): Removed.
	(safe-source-location-for-emacs): Removed. Not needed anymore.

	(call-with-debugging-environment): Do not perform stack hinting
	depending on *DEBUG-SWANK-BACKEND*.

2009-12-10  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-sbcl.lisp (set-break-hook): New.
	(call-with-break-hook): New, too. Both extracted from elsewhere.
	(install-debugger-globally, call-with-debugger-hook): Use them.
	(make-invoke-debugger-hook): Adapted not to call *debugger-hook*
	on its own; it should rather decline because *debugger-hook* is
	tried after *invoke-debugger-hook* anyway. Previously, a
	custom *debugger-hook* (which declines itself) would have been
	executed twice.

2009-12-07  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-parse-toplevel-form): Use
	`slime-region-for-defun-at-point' instead of `beginning-of-defun'.

2009-12-03  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-documentation-lookup-function): New hook,
	defaults to `slime-hyperspec-lookup'.
	(slime-documentation-lookup): Invoke hook.
	(slime-prefix-bindings): Bind `C-c C-d h' to it.

2009-12-02  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (frame-locals): `frame-debug-vars' can return NIL,
	so check before using it as a vector.
	Patch by Nathan Bird.