@@ -909,11 +909,12 @@ Return a list of the form (NAME LOCATION)."
 ;;; feature.
 
 (defun make-invoke-debugger-hook (hook)
-  #'(sb-int:named-lambda swank-invoke-debugger-hook
-        (condition old-hook)
-      (if *debugger-hook*
-          nil           ; decline, *DEBUGGER-HOOK* will be tried next.
-          (funcall hook condition old-hook))))
+  (when hook
+    #'(sb-int:named-lambda swank-invoke-debugger-hook
+          (condition old-hook)
+        (if *debugger-hook*
+            nil         ; decline, *DEBUGGER-HOOK* will be tried next.
+            (funcall hook condition old-hook)))))
 
 (defun set-break-hook (hook)
   (setq sb-ext:*invoke-debugger-hook* (make-invoke-debugger-hook hook)))
@@ -976,7 +977,8 @@ Return a list of the form (NAME LOCATION)."
     (invoke-restart 'sb-ext:step-out)))
 
 (defimplementation call-with-debugger-hook (hook fun)
-  (let (#+#.(swank-backend::sbcl-with-new-stepper-p)
+  (let ((*debugger-hook* hook)
+        #+#.(swank-backend::sbcl-with-new-stepper-p)
         (sb-ext:*stepper-hook*
          (lambda (condition)
            (typecase condition
