@@ -1,3 +1,9 @@
+2009-12-11  Tobias C. Rittweiler <tcr@freebits.de>
+
+	* swank-sbcl.lisp (call-with-debugger-hook): Oops, removed the
+	binding for *DEBUGGER-HOOK*. Fix that.
+	(make-invoke-debugger-hook): Do nothing if hook is NIL.
+
 2009-12-10  Tobias C. Rittweiler <tcr@freebits.de>
 
 	* swank-backend.lisp (*debug-swank-backend*): New variable. If
